[package]
name = "murtaugh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.3", features = ["serde"]}
axum = { version = "0.6.18", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "macros", "uuid", "offline" ] }
serde = "1.0"
serde_json = "1.0"
futures-util = "0.3.28"
